fixing logo alignment in header

--- a/_assets/css/theme/_uswds-theme-custom-styles.scss
+++ b/_assets/css/theme/_uswds-theme-custom-styles.scss
@@ -58,7 +58,6 @@ i.e.
   content: '';
 }
 
-
 .site-title {
   vertical-align: top;
   @include u-margin-top(2);
@@ -75,6 +74,12 @@ i.e.
   h1,h2,h3,h4,h5,h6 {
     @include u-text('primary-darker');
   }
+}
+
+/// prose
+
+.usa-prose a {
+  @include u-text($theme-link-color);
 }
 
 //// Site Navbar
